--- a/img/index.html
+++ b/img/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>FIFA WC Responsive Website</title>
   </head>
   <body>
     <header>
       <section class="banner container">
         <div class="banner-description">
-          <h2>The Greatest show on the earth</h2>
-          <p>
+          <h2 id="h2">The Greatest <br> show on the earth</h2>
+          <p id="p1">
             Contrary to popular belief, Lorem Ipsum is not simply random text.
             It has roots in a piece of classical Latin literature from 45 BC,
             making it over 2000 years old.
           </p>
-          <button>Watch Now</button>
+          <button class="btn">Watch Now <i class="fa-solid fa-angle-right"></i></button>
         </div>
         <div class="banner-img">
             <img src="banner/banner-img.png" alt="">
