--- a/img/index.html
+++ b/img/index.html
@@ -27,5 +27,14 @@
         </div>
       </section>
     </header>
+    <main>
+        <section class="matches container">
+            <div class="left">
+                <button class="pry-btn">Upcoming Match</button>
+                <button class="pry-btn">All Groups</button><button class="btn">Blog</button>
+            </div>
+            <div class="right"></div>
+        </section>
+    </main>
   </body>
 </html>
